新增数据库表结构设计文档

--- a/设计文档/数据库表结构设计文档.md
+++ b/设计文档/数据库表结构设计文档.md
@@ -80,3 +80,75 @@ CREATE TABLE `zmsk_commodity` (
   PRIMARY KEY (`id`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='商品信息表';
 ```
+
+### 6、桌台设备关联表
+
+```
+CREATE TABLE `zmsk_table` (
+  `id` int(10) NOT NULL AUTO_INCREMENT COMMENT '主键',
+  `store_id` int(10) NOT NULL COMMENT '商家Id',
+  `equipment_id` varchar(10) NOT NULL COMMENT '设备Id',
+  `table_id` varchar(6) NOT NULL COMMENT '桌号',
+  `equipment_pwd` char(32) NOT NULL COMMENT '设备登入密码',
+  `table_create_time` int(11) NOT NULL COMMENT '添加时间戳',
+  `table_update_time` int(11) NOT NULL COMMENT '修改时间戳',
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='桌台设备关联表';
+```
+
+### 7、门店公告信息表
+
+```
+CREATE TABLE `zmsk_notice` (
+  `id` int(10) NOT NULL AUTO_INCREMENT COMMENT '主键',
+  `store_id` int(10) NOT NULL COMMENT '门店Id',
+  `notice_message` text NOT NULL COMMENT '公告信息',
+  `notice_create_time` int(11) NOT NULL COMMENT '添加时间戳',
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='门店公告信息表';
+```
+
+### 8、门店呼叫管理表
+
+```
+CREATE TABLE `zmsk_notify` (
+  `id` int(10) NOT NULL AUTO_INCREMENT COMMENT '主键',
+  `store_id` int(10) NOT NULL COMMENT '门店Id',
+  `table_id` varchar(6) NOT NULL COMMENT '桌号',
+  `notify_status` int(1) DEFAULT '0' COMMENT '状态：0未处理、1已处理、2删除',
+  `notify_create_time` int(11) NOT NULL COMMENT '添加时间',
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='门店呼叫管理表';
+```
+
+### 9、商品每日库存信息表
+
+```
+CREATE TABLE `zmsk_commodity_storage` (
+  `id` int(10) NOT NULL AUTO_INCREMENT COMMENT '主键',
+  `commodity_id` int(10) NOT NULL COMMENT '商品Id',
+  `tatal_storage` int(3) NOT NULL COMMENT '商品总库存',
+  `lock_storage` int(3) DEFAULT '0' COMMENT '商品锁定库存',
+  `available_storage` int(3) DEFAULT '0' COMMENT '商品可售库存',
+  `storage_date` char(8) NOT NULL COMMENT '库存日期，格式为yyyyMMdd',
+  `storage_create_time` int(11) NOT NULL COMMENT '添加时间戳',
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='商品每日库存信息表';
+```
+
+### 10、订单表
+
+```
+CREATE TABLE `zmsk_order` (
+  `id` int(10) NOT NULL COMMENT '主键',
+  `store_id` int(10) NOT NULL COMMENT '门店Id',
+  `order_number` varchar(30) NOT NULL COMMENT '订单号',
+  `commodity_ids` varchar(100) NOT NULL COMMENT '商品Id，多个商品逗号分割',
+  `table_id` varchar(6) NOT NULL COMMENT '桌号',
+  `order_price` int(7) NOT NULL COMMENT '价格，单位分',
+  `order_status` int(1) NOT NULL DEFAULT '0' COMMENT '状态：0未支付，1、支付，2、完成',
+  `order_pay_way` int(1) NOT NULL COMMENT '支付方式 1、支付宝，2、微信支付',
+  `order_create_time` int(11) NOT NULL COMMENT '添加时间戳',
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='订单表';
+```
