新增接口文档

--- a/接口文档/平板用户操作接口文档/下单操作接口文档.md
+++ b/接口文档/平板用户操作接口文档/下单操作接口文档.md
@@ -1,11 +1,12 @@
-### 呼叫操作文档 ###
+### 下单操作接口文档 ###
 -----
 
-### 点击呼叫操作接口
+### 下单操作接口
 
-> 点击呼叫操作接口
+> 下单操作接口
 
-|URL|http://www.zmsk.com/api/pad/notify/add?storeId=&tableId=|
+
+|URL|http://www.zmsk.com/api/pad/order/commodity?storeId=&tableId=&commodityIds=&price=|
 |---|---|
 |method|POST|
 
@@ -15,6 +16,8 @@
 |---|--|
 |storeId|门店Id|
 |tableId|桌号|
+|commodityIds|商品Ids,多个id用逗号分开|
+|price|多个商品的合计价格|
 
 返回值
 
@@ -23,6 +26,7 @@
 ```
 {
   "code": 200,
+  "data": "15055565338411A001", //订单号
   "msg": "success"
 }
 ```
