新增十一讨论更改文档

--- a/接口文档/平板用户操作接口文档/下单操作接口文档.md
+++ b/接口文档/平板用户操作接口文档/下单操作接口文档.md
@@ -6,9 +6,28 @@
 > 下单操作接口
 
 
-|URL|http://www.zmsk.com/api/pad/order/commodity?storeId=&tableId=&commodityIds=&price=|
+|URL|http://www.zmsk.com/api/pad/order/commodity?storeId=&tableId=|
 |---|---|
 |method|POST|
+
+body 参数
+
+```
+[
+  {
+      "commodityId":1,
+      "count":1,
+      "price":50,
+      "name":"测试商品1"
+  },
+  {
+      "commodityId":2,
+      "count":2,
+      "price":58,
+      "name":"测试商品12"
+  }
+]
+```
 
 参数说明
 
@@ -16,8 +35,10 @@
 |---|--|
 |storeId|门店Id|
 |tableId|桌号|
-|commodityIds|商品Ids,多个id用逗号分开|
-|price|多个商品的合计价格|
+|commodityId|商品Id|
+|count|商品数量|
+|price|商品价格|
+|name|商品名称|
 
 返回值
 
