--- a/接口文档/平板用户操作接口文档/设备登入操作接口文档.md
+++ b/接口文档/平板用户操作接口文档/设备登入操作接口文档.md
@@ -34,6 +34,29 @@
 }
 ```
 
+登入冲突
+
+```
+{
+    "code": 409,
+    "exception": "EquipmentLoginConflictException",
+    "message": "equipment login confilct equpimentId is zmsk0001",
+    "ressource": ""
+}
+```
+
+认证失败
+
+```
+{
+    "code": 401,
+    "exception": "UnauthorizedException",
+    "message": "equipment auth exception equipmentId is zmsk0001",
+    "ressource": ""
+}
+```
+
+
 返回值说明
 
 |参数名|描述|
@@ -42,6 +65,53 @@
 |storeId|门店Id|
 |tableId|桌号|
 
+
+可能的错误
+
+|httpCode|说明|
+|---|---|
+|400|参数错误|
+|401|认证失败|
+|405|Method Not Allowed，HTTP请求方法错误|
+|415|Unsupported Media Type，没有设置请求头的Content-type|
+|500|内部服务器错误|
+
+### 设备退出登入
+
+> 设备退出登入
+
+|URL|http://www.zmsk.com/api/pad/equipment/logout?equipmentId=&equipmentPwd=|
+|---|---|
+|method|POST|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|equipmentId|设备Id|
+|equipmentPwd|设备登入密码|
+
+返回值
+
+成功
+
+```
+{
+  "code": 200,
+  "msg": "success"
+}
+```
+
+认证失败
+
+```
+{
+    "code": 401,
+    "exception": "UnauthorizedException",
+    "message": "equipment auth exception equipmentId is zmsk0001",
+    "ressource": ""
+}
+```
 
 可能的错误
 
