添加商品类别排序值接口文档修改

--- a/接口文档/门店操作/商品类别/商品类别操作接口文档.md
+++ b/接口文档/门店操作/商品类别/商品类别操作接口文档.md
@@ -5,7 +5,7 @@
 
 >添加商品类别
 
-|URL|http://www.zmsk.com/api/commodity/category/create?storeId=&categoryName=|
+|URL|http://www.zmsk.com/api/commodity/category/create?storeId=&categoryName=&categorySort=|
 |---|---|
 |method|POST|
 
@@ -14,7 +14,8 @@
 |参数名|描述|
 |---|---|
 |storeId|门店Id|
-|categoryName|商品名称|
+|categoryName|类别名称|
+|categorySort|类别排序值,非必填，默认值为0|
 
 返回值
 
