新增设备登入接口文档

--- a/接口文档/平板用户操作接口文档/设备登入操作接口文档.md
+++ b/接口文档/平板用户操作接口文档/设备登入操作接口文档.md
@@ -6,7 +6,7 @@
 > 设备登入
 
 
-|URL|http://www.zmsk.com/api/pad/equipment/login?equipmentId=&equipmentPwd=|
+|URL|http://www.zmsk.com/api/pad/equipment/login?equipmentId=&equipmentNumber=&equipmentPwd=|
 |---|---|
 |method|POST|
 
@@ -15,6 +15,7 @@
 |参数名|参数描述|
 |---|--|
 |equipmentId|设备Id|
+|equipmentNumber|设备登入账号|
 |equipmentPwd|设备登入密码|
 
 
@@ -80,7 +81,7 @@
 
 > 设备退出登入
 
-|URL|http://www.zmsk.com/api/pad/equipment/logout?equipmentId=&equipmentPwd=|
+|URL|http://www.zmsk.com/api/pad/equipment/logout?equipmentNumber=&equipmentPwd=|
 |---|---|
 |method|POST|
 
@@ -88,7 +89,7 @@
 
 |参数名|参数描述|
 |---|--|
-|equipmentId|设备Id|
+|equipmentNumber|设备登入账号|
 |equipmentPwd|设备登入密码|
 
 返回值
