--- a/接口文档/门店操作/门店订单操作接口文档.md
+++ b/接口文档/门店操作/门店订单操作接口文档.md
@@ -1,7 +1,7 @@
 ### 门店订单操作接口文档###
 ---
 
-### 获取门店订单列表
+### 获取门店所有订单列表
 
 
 |URL|http://www.zmsk.com/api/store/commodity/order/{storeId}|
@@ -37,6 +37,54 @@
 }
 ```
 
+
+可能的错误
+
+|httpCode|说明|
+|---|---|
+|400|参数错误|
+|405|Method Not Allowed，HTTP请求方法错误|
+|415|Unsupported Media Type，没有设置请求头的Content-type|
+|500|内部服务器错误|
+
+
+### 获取订单对应的商品信息
+
+
+|URL|http://www.zmsk.com/api/store/commodity/order/${orderNumber}|
+|---|---|
+|method|GET|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|orderNumber|订单号|
+
+返回值
+
+```
+{
+  "code": 200,
+  "data": [
+    {
+      "commodityCount": 1,
+      "commodityName": "测试商品1",
+      "commodityPrice": 50,
+      "id": 1,
+      "orderNumber": "15074536745771A001"
+    },
+    {
+      "commodityCount": 2,
+      "commodityName": "测试商品12",
+      "commodityPrice": 58,
+      "id": 2,
+      "orderNumber": "15074536745771A001"
+    }
+  ],
+  "msg": "success"
+}
+```
 
 可能的错误
 
