--- a/接口文档/平板用户操作接口文档/下单操作接口文档.md
+++ b/接口文档/平板用户操作接口文档/下单操作接口文档.md
@@ -60,3 +60,39 @@ body 参数
 |405|Method Not Allowed，HTTP请求方法错误|
 |415|Unsupported Media Type，没有设置请求头的Content-type|
 |500|内部服务器错误|
+
+### 支付订单
+
+> 支付订单
+
+|URL|http://www.zmsk.com/api/pad/order/commodity/pay?orderNumber=&paymode=|
+|---|---|
+|method|POST|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|orderNumber|订单号|
+|paymode|支付方式|
+
+返回值
+
+成功
+
+```
+{
+  "code": 200,
+  "msg": "success"
+}
+```
+
+可能的错误
+
+|httpCode|说明|
+|---|---|
+|400|参数错误|
+|405|Method Not Allowed，HTTP请求方法错误|
+|415|Unsupported Media Type，没有设置请求头的Content-type|
+|500|内部服务器错误|
+
