新增取消订单接口

--- a/接口文档/门店操作/门店订单操作接口文档.md
+++ b/接口文档/门店操作/门店订单操作接口文档.md
@@ -189,6 +189,42 @@
 |500|内部服务器错误|
 
 
+### 取消订单
+
+>  取消订单
+
+
+|URL|http://www.zmsk.com/api/store/commodity/order/cancel/${orderNumber}|
+|---|---|
+|method|POST|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|orderNumber|订单号|
+
+返回值
+
+成功
+
+```
+{
+  "code": 200,
+  "msg": "success"
+}
+```
+
+可能的错误
+
+|httpCode|说明|
+|---|---|
+|400|参数错误|
+|405|Method Not Allowed，HTTP请求方法错误|
+|415|Unsupported Media Type，没有设置请求头的Content-type|
+|500|内部服务器错误|
+
+
 ### 获取未处理的订单
 
 > 获取未处理的订单
