新增接口文档

--- a/接口文档/平板用户操作接口文档/下单操作接口文档.md
+++ b/接口文档/平板用户操作接口文档/下单操作接口文档.md
@@ -96,3 +96,82 @@ body 参数
 |415|Unsupported Media Type，没有设置请求头的Content-type|
 |500|内部服务器错误|
 
+### 判断订单是否支付
+
+|URL|http://www.zmsk.com/api/pad/order/commodity/ispay?orderNumber=|
+|---|---|
+|method|GET|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|orderNumber|订单号|
+
+返回值
+
+已支付
+
+```
+{
+  "code": 200,
+  "msg": "success"
+}
+```
+
+未支付
+
+```
+{
+  "code": 304,
+  "msg": " order unpay 1508417392771A002"
+}
+```
+
+
+
+可能的错误
+
+|httpCode|说明|
+|---|---|
+|400|参数错误|
+|405|Method Not Allowed，HTTP请求方法错误|
+|415|Unsupported Media Type，没有设置请求头的Content-type|
+|500|内部服务器错误|
+
+
+### 取消订单
+
+|URL|http://www.zmsk.com/api/pad/order/commodity/cancel?orderNumber=|
+|---|---|
+|method|POST|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|orderNumber|订单号|
+
+返回值
+
+成功
+
+```
+{
+  "code": 200,
+  "msg": "success"
+}
+```
+
+可能的错误
+
+|httpCode|说明|
+|---|---|
+|400|参数错误|
+|405|Method Not Allowed，HTTP请求方法错误|
+|415|Unsupported Media Type，没有设置请求头的Content-type|
+|500|内部服务器错误|
+
+
+
+
