--- a/接口文档/管理员操作接口/门店操作接口.md
+++ b/接口文档/管理员操作接口/门店操作接口.md
@@ -60,7 +60,7 @@
 
 ### 添加门店信息
 
-|URL|http://www.zmsk.com/api/admin/store/create?sotreName=&memberTel=&memberEmail=|
+|URL|http://www.zmsk.com/api/admin/store/create?sotreName=&memberTel=&memberEmail=&memberPwd=&memberName=&storeAddress=|
 |---|---|
 |method|POST|
 
@@ -72,6 +72,9 @@
 |sotreName|门店名称|
 |memberTel|门店电话|
 |memberEmail|门店邮箱|
+|memberPwd|门店登入密码|
+|memberName|门店联系人|
+|storeAddress|门店地址|
 
 
 返回值
