新增库存不足返回值

--- a/接口文档/平板用户操作接口文档/下单操作接口文档.md
+++ b/接口文档/平板用户操作接口文档/下单操作接口文档.md
@@ -52,6 +52,12 @@ body 参数
 }
 ```
 
+库存不足
+
+```
+{"code":5001,"exception":"OrderCommodityException","message":"order commodity error commodity storage is insufficient commodity id is 1","ressource":""}
+```
+
 可能的错误
 
 |httpCode|说明|
