--- a/接口文档/订单支付/订单支付接口.md
+++ b/接口文档/订单支付/订单支付接口.md
@@ -35,3 +35,38 @@
 |405|Method Not Allowed，HTTP请求方法错误|
 |415|Unsupported Media Type，没有设置请求头的Content-type|
 |500|内部服务器错误|
+
+### 支付宝支付方式
+
+
+|URL|http://www.zmsk.com/api/store/pay/alipay?orderNumber=|
+|---|---|
+|method|POST|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|orderNumber|订单号|
+
+返回值
+
+成功
+
+```
+{
+  "code": 200,
+  "data": "https://qr.alipay.com/bax01064jvvnnr6j549u009e",
+  "msg": "success"
+}
+```
+
+
+可能的错误
+
+|httpCode|说明|
+|---|---|
+|400|参数错误|
+|405|Method Not Allowed，HTTP请求方法错误|
+|415|Unsupported Media Type，没有设置请求头的Content-type|
+|500|内部服务器错误|
