新增管理台门店操作接口文档

--- a/接口文档/管理员操作接口/桌台设备操作.md
+++ b/接口文档/管理员操作接口/桌台设备操作.md
@@ -58,7 +58,7 @@
 
 ### 添加门店桌台设备
 
-|URL|http://www.zmsk.com/api/admin/table/equipment/store/create?storeId=&storeName=&beginNumber=&equipmentPwd|
+|URL|http://www.zmsk.com/api/admin/table/equipment/store/create?storeId=&storeName=&beginNumber=&count=&equipmentPwd|
 |---|---|
 |method|POST|
 
@@ -69,6 +69,7 @@
 |storeId|门店Id|
 |storeName|门店名称|
 |beginNumber|起始编号|
+|count|设备数量|
 |equipmentPwd|密码|
 
 返回值
