--- a/接口文档/管理员操作接口/门店操作接口.md
+++ b/接口文档/管理员操作接口/门店操作接口.md
@@ -58,6 +58,48 @@
 |415|Unsupported Media Type，没有设置请求头的Content-type|
 |500|内部服务器错误|
 
+### 获取门店信息
+
+|URL|http://www.zmsk.com/api/admin/store/{storeId}|
+|---|---|
+|method|GET|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|storeId|门店Id|
+
+
+返回值
+
+成功
+
+```
+{
+  "code": 200,
+  "data": {
+    "id": 2,
+    "memberEmail": "cv_warrior@126.com",
+    "memberName": "小马哥",
+    "memberTel": "15080450046",
+    "storeAddress": "福建，福州",
+    "storeName": "小马哥"
+  },
+  "msg": "success"
+}
+```
+
+可能的错误
+
+|httpCode|说明|
+|---|---|
+|400|参数错误|
+|405|Method Not Allowed，HTTP请求方法错误|
+|415|Unsupported Media Type，没有设置请求头的Content-type|
+|500|内部服务器错误|
+
+
 ### 添加门店信息
 
 |URL|http://www.zmsk.com/api/admin/store/create?sotreName=&memberTel=&memberEmail=&memberPwd=&memberName=&storeAddress=|
@@ -97,4 +139,54 @@
 |405|Method Not Allowed，HTTP请求方法错误|
 |415|Unsupported Media Type，没有设置请求头的Content-type|
 |500|内部服务器错误|
+
+### 修改门店信息
+
+|URL|http://www.zmsk.com/api/admin/store/update|
+|---|---|
+|method|PUT|
+
+body 参数
+
+```
+{
+     "id": 2,
+    "memberEmail": "cv_warrior@126.com",
+    "memberName": "小马哥",
+    "memberTel": "15080450046",
+    "storeAddress": "福建，福州",
+    "storeName": "warrior"
+}
+```
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|id|主键Id|
+|sotreName|门店名称|
+|memberTel|门店电话|
+|memberEmail|门店邮箱|
+|memberName|门店联系人|
+|storeAddress|门店地址|
+
+成功
+
+```
+{
+  "code": 200,
+  "msg": "success"
+}
+```
+
+
+可能的错误
+
+|httpCode|说明|
+|---|---|
+|400|参数错误|
+|405|Method Not Allowed，HTTP请求方法错误|
+|415|Unsupported Media Type，没有设置请求头的Content-type|
+|500|内部服务器错误|
+
 
