新增门店统计补货中的商品

--- a/接口文档/门店操作/数据统计接口文档/门店相关数据统计接口文档.md
+++ b/接口文档/门店操作/数据统计接口文档/门店相关数据统计接口文档.md
@@ -161,3 +161,36 @@
 |405|Method Not Allowed，HTTP请求方法错误|
 |415|Unsupported Media Type，没有设置请求头的Content-type|
 |500|内部服务器错误|
+
+
+### 获取门店补货中的数量
+
+|URL|http://www.zmsk.com/api/statistic/commodity/replenishment/{storeId}|
+|---|---|
+|method|GET|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|storeId|门店Id|
+
+成功
+
+```
+{
+  "code": 200,
+  "data": 5, //统计数据
+  "msg": "success"
+}
+```
+
+
+可能的错误
+
+|httpCode|说明|
+|---|---|
+|400|参数错误|
+|405|Method Not Allowed，HTTP请求方法错误|
+|415|Unsupported Media Type，没有设置请求头的Content-type|
+|500|内部服务器错误|
