新增设备强制下线接口文档

--- a/接口文档/管理员操作接口/桌台设备操作.md
+++ b/接口文档/管理员操作接口/桌台设备操作.md
@@ -92,3 +92,34 @@
 |415|Unsupported Media Type，没有设置请求头的Content-type|
 |500|内部服务器错误|
 
+### 强制下线桌台设备
+
+
+|URL|http://www.zmsk.com/api/admin/table/equipment/offline/{id}|
+|---|---|
+|method|PUT|
+
+参数说明
+
+|参数名|描述|
+|---|---|
+|id|主键Id|
+
+成功
+
+```
+{
+  "code": 200,
+  "msg": "success"
+}
+```
+
+可能的错误
+
+|httpCode|说明|
+|---|---|
+|400|参数错误|
+|405|Method Not Allowed，HTTP请求方法错误|
+|415|Unsupported Media Type，没有设置请求头的Content-type|
+|500|内部服务器错误|
+
