新增门店模板

--- a/接口文档/门店操作/门店基本信息操作文档.md
+++ b/接口文档/门店操作/门店基本信息操作文档.md
@@ -24,16 +24,18 @@
     "memberEmail": "839807316@qq.com",
     "memberName": "测试",
     "memberNumber": "18105035196",
+    "memberPwd": "E10ADC3949BA59ABBE56E057F20F883E",
     "memberTel": "18105035196",
-    "storeAddress": "福建，福州",
+    "storeAddress": "福建，福州,鼓楼",
     "storeCreateTime": 1505660475,
     "storeCustomerTel": "18105035196",
     "storeId": "j7ioancru7aod0vnw8wi",
-    "storeImagePath": "http://image.zmsk.com/efd/123/sdfs/1.jpg",
+    "storeImagePath": "http://doinggo.oss-cn-shenzhen.aliyuncs.com/20171008/2041/e6dad34f-50a0-4b6a-91db-f1efe36893c7.jpg",
     "storeIntroduction": "123456",
     "storeName": "测试店铺名称",
     "storeNoticeMessage": "欢迎使用智点系统",
     "storeStatus": 1,
+    "storeTemplate": "/temp/ty3",
     "storeUpdateTime": 1505660475
   },
   "msg": "success"
@@ -54,6 +56,7 @@
 |storeAddress|门店地址|
 |memberName|会员名称|
 |storeNoticeMessage|公告|
+|storeTemplate|门店模板|
 |storeUpdateTime|修改时间戳|
 
 
@@ -80,7 +83,8 @@ body 参数
     "memberTel": "18105035196",
     "storeAddress": "福建，福州",
     "storeImagePath": "http://image.zmsk.com/efd/123/sdfs/1.jpg",
-    "storeName": "测试店铺名称"
+    "storeName": "测试店铺名称"，
+	"storeTemplate": "/temp/ty3"
 }
 ```
 
@@ -94,6 +98,7 @@ body 参数
 |storeImagePath|logo地址|
 |storeName|门店名称|
 |storeAddress|门店地址|
+|storeTemplate|门店模板|
 
 成功
 
