新增下单备注参数

--- a/接口文档/平板用户操作接口文档/下单操作接口文档.md
+++ b/接口文档/平板用户操作接口文档/下单操作接口文档.md
@@ -6,7 +6,7 @@
 > 下单操作接口
 
 
-|URL|http://www.zmsk.com/api/pad/order/commodity?storeId=&tableId=|
+|URL|http://www.zmsk.com/api/pad/order/commodity?storeId=&tableId=&remark=|
 |---|---|
 |method|POST|
 
@@ -34,6 +34,7 @@ body 参数
 |参数名|参数描述|
 |---|--|
 |storeId|门店Id|
+|remark|备注，不是必填|
 |tableId|桌号|
 |commodityId|商品Id|
 |count|商品数量|
