更新接口文档

--- a/接口文档/门店操作/商品类别/商品类别操作接口文档.md
+++ b/接口文档/门店操作/商品类别/商品类别操作接口文档.md
@@ -20,7 +20,7 @@
 返回值
 
 成功
-```
+```json
 {
   "code": 200,
   "msg": "success"
@@ -42,7 +42,7 @@
 
 返回值
 
-```
+```json
 {
   "code": 200,
   "data": [
@@ -99,7 +99,7 @@
 
 返回值
 
-```
+```json
 {
   "code": 200,
   "data": {
@@ -132,7 +132,7 @@
 返回值
 
 成功
-```
+```json
 {
   "code": 200,
   "msg": "success"
@@ -156,9 +156,54 @@
 返回值
 
 成功
-```
+```json
 {
   "code": 200,
   "msg": "success"
 }
 ```
+
+### 6、 启用商品类别,同时上架商品类别下的所有商品
+
+|URL|http://www.zmsk.com/api/commodity/category/enable/{id}|
+|---|---|
+|method|PUT|
+
+参数说明
+
+|参数名|描述|
+|---|---|
+|id|商品类别Id|
+
+返回值
+
+成功
+```json
+{
+  "code": 200,
+  "msg": "success"
+}
+```
+
+### 7、禁用商品类别，同时下架商品类别下的所有商品
+
+|URL|http://www.zmsk.com/api/commodity/category/disable/{id}|
+|---|---|
+|method|PUT|
+
+参数说明
+
+|参数名|描述|
+|---|---|
+|id|商品类别Id|
+
+返回值
+
+成功
+```json
+{
+  "code": 200,
+  "msg": "success"
+}
+```
+
