--- a/接口文档/门店操作/数据统计接口文档/门店相关数据统计接口文档.md
+++ b/接口文档/门店操作/数据统计接口文档/门店相关数据统计接口文档.md
@@ -16,7 +16,7 @@
 
 成功
 
-```
+```json
 {
   "code": 200,
   "data": 1, //统计数据
@@ -48,7 +48,7 @@
 
 成功
 
-```
+```json
 {
   "code": 200,
   "data": 1, //统计数据
@@ -80,7 +80,7 @@
 
 成功
 
-```
+```json
 {
   "code": 200,
   "data": 1, //统计数据
@@ -112,7 +112,7 @@
 
 成功
 
-```
+```json
 {
   "code": 200,
   "data": 5, //统计数据
@@ -144,7 +144,7 @@
 
 成功
 
-```
+```json
 {
   "code": 200,
   "data": 5, //统计数据
@@ -177,7 +177,7 @@
 
 成功
 
-```
+```json
 {
   "code": 200,
   "data": 5, //统计数据
@@ -209,7 +209,7 @@
 
 成功
 
-```
+```json
 {
   "code": 200,
   "data": {
@@ -246,7 +246,7 @@
 
 成功
 
-```
+```json
 {
   "code": 200,
   "data": {
@@ -283,7 +283,7 @@
 
 成功
 
-```
+```json
 {
   "code": 200,
   "data": {
@@ -304,5 +304,195 @@
 |405|Method Not Allowed，HTTP请求方法错误|
 |415|Unsupported Media Type，没有设置请求头的Content-type|
 |500|内部服务器错误|
+
+
+### 获取门店最近一个月销售图表显示数据
+
+
+|URL|http://www.zmsk.com/api/statistic/lastmonth/volue/{storeId}|
+|---|---|
+|method|GET|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|storeId|门店Id|
+
+成功
+
+```json
+{
+  "code": 200,
+  "data": {
+    "2018-03-01": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-02": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-03": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-04": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-05": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-06": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-07": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-08": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-09": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-10": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-11": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-12": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-13": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-14": {
+      "orderCount": 1,
+      "orderMoney": 1,
+      "storeId": "1"
+    },
+    "2018-03-15": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-16": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-17": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-18": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-19": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-20": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-21": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-22": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-23": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-24": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-25": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-26": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-27": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-28": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-29": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-30": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    },
+    "2018-03-31": {
+      "orderCount": 0,
+      "orderMoney": 0,
+      "storeId": "1"
+    }
+  },
+  "msg": "success"
+}
+```
+
+可能的错误
+
+|httpCode|说明|
+|---|---|
+|400|参数错误|
+|405|Method Not Allowed，HTTP请求方法错误|
+|415|Unsupported Media Type，没有设置请求头的Content-type|
+|500|内部服务器错误|
+
 
 
