新增最近一个月的订单销售接口

--- a/接口文档/门店操作/数据统计接口文档/门店相关数据统计接口文档.md
+++ b/接口文档/门店操作/数据统计接口文档/门店相关数据统计接口文档.md
@@ -305,8 +305,44 @@
 |415|Unsupported Media Type，没有设置请求头的Content-type|
 |500|内部服务器错误|
 
+### 获取近一个月订单成交量
 
-### 获取门店最近一个月销售图表显示数据
+|URL|http://www.zmsk.com/api/statistic/onemonth/volue/{storeId}|
+|---|---|
+|method|GET|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|storeId|门店Id|
+
+成功
+
+```json
+{
+  "code": 200,
+  "data": {
+    "orderCount": 1, //订单数量
+    "orderMoney": 1, //订单金额
+    "storeId": "1" //门店Id
+  },
+  "msg": "success"
+}
+```
+
+
+可能的错误
+
+|httpCode|说明|
+|---|---|
+|400|参数错误|
+|405|Method Not Allowed，HTTP请求方法错误|
+|415|Unsupported Media Type，没有设置请求头的Content-type|
+|500|内部服务器错误|
+
+
+### 获取门店最近一个月每天销售图表显示数据
 
 
 |URL|http://www.zmsk.com/api/statistic/lastmonth/volue/{storeId}|
