完成支付方式相关操作接口文档

--- a/接口文档/管理员操作接口/新版接口/门店设备操作接口文档.md
+++ b/接口文档/管理员操作接口/新版接口/门店设备操作接口文档.md
@@ -28,6 +28,32 @@
 }
 ```
 
+### 新增默认店铺Id为0的设备信息
+
+|URL|http://www.zmsk.com/api/admin/equipment/default/add?count=&equipmentPwd=&equipmentType=&renewalFee=|
+|---|---|
+|method|POST|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|count|新增设备数量|
+|equipmentPwd|设备登入密码|
+|equipmentType|设备类型:1单打，2双打|
+|renewalFee|续费金额|
+
+返回值
+
+成功
+
+```json
+{
+  "code": 200,
+  "msg": "success"
+}
+```
+
 ### 获取门店设备信息
 
 |URL|http://www.zmsk.com/api/admin/equipment/query?storeId=|
