--- a/接口文档/门店操作/桌台设备操作文档/门店设备操作新版接口文档.md
+++ b/接口文档/门店操作/桌台设备操作文档/门店设备操作新版接口文档.md
@@ -331,3 +331,26 @@
   "msg": "success"
 }
 ```
+
+### 绑定店铺和设备
+
+|URL|http://www.zmsk.com/api/store/equipment/bind?storeId=&equipmentNumber=|
+|---|---|
+|method|POST|
+
+
+|参数名|参数描述|
+|---|--|
+|storeId|门店Id|
+|equipmentNumber|设备号|
+
+返回值
+
+成功
+
+```json
+{
+  "code": 200,
+  "msg": "success"
+}
+```
