--- a/接口文档/门店操作/门店订单操作接口文档.md
+++ b/接口文档/门店操作/门店订单操作接口文档.md
@@ -273,3 +273,38 @@
 |405|Method Not Allowed，HTTP请求方法错误|
 |415|Unsupported Media Type，没有设置请求头的Content-type|
 |500|内部服务器错误|
+
+### 更改订单状态
+
+
+|URL|http://www.zmsk.com/api/store/commodity/order/update/status?id=&payStatus=&orderStatus=|
+|---|---|
+|method|GET|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|id|订单主键Id|
+|payStatus|支付状态|
+|orderStatus|订单状态|
+
+返回值
+
+成功
+
+```
+{
+  "code": 200,
+  "msg": "success"
+}
+```
+
+可能的错误
+
+|httpCode|说明|
+|---|---|
+|400|参数错误|
+|405|Method Not Allowed，HTTP请求方法错误|
+|415|Unsupported Media Type，没有设置请求头的Content-type|
+|500|内部服务器错误|
