完成设备桌台信息修改

--- a/接口文档/门店操作/桌台设备操作文档/门店设备操作新版接口文档.md
+++ b/接口文档/门店操作/桌台设备操作文档/门店设备操作新版接口文档.md
@@ -311,12 +311,13 @@
 
 ### 修改设备桌台信息
 
-|URL|http://www.zmsk.com/api/store/equipment/update?equipmentId=&equipmentPlainPwd=&tableNumber=|
+|URL|http://www.zmsk.com/api/store/equipment/update?storeId=&equipmentId=&equipmentPlainPwd=&tableNumber=|
 |---|---|
 |method|POST|
 
 |参数名|参数描述|
 |---|--|
+|storeId|门店Id|
 |equipmentId|设备主键Id|
 |equipmentPlainPwd|设备密码明文|
 |tableNumber|桌台号|
