修改支付信息配置接口

--- a/接口文档/权限/管理员操作/门店及管理员操作接口文档.md
+++ b/接口文档/权限/管理员操作/门店及管理员操作接口文档.md
@@ -63,3 +63,48 @@
 |status|状态：0：未启用，1：启用|
 |memberName|会员名称|
 |storeAddress|门店地址|
+
+### 启用门店
+
+|URL|http://www.zmsk.com/api/v1/admin/store/enable/{storeId}|
+|---|---|
+|method|PUT|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|storeId|门店Id|
+
+
+返回值
+
+```json
+{
+  "code": 200,
+  "msg": "success"
+}
+```
+
+### 禁用门店
+
+
+|URL|http://www.zmsk.com/api/v1/admin/store/disable/{storeId}|
+|---|---|
+|method|PUT|
+
+参数说明
+
+|参数名|参数描述|
+|---|--|
+|storeId|门店Id|
+
+
+返回值
+
+```json
+{
+  "code": 200,
+  "msg": "success"
+}
+```
