新增更具会员Id

--- a/接口文档/权限/门店操作/会员角色权限操作接口文档.md
+++ b/接口文档/权限/门店操作/会员角色权限操作接口文档.md
@@ -44,3 +44,42 @@
   "msg": "success"
 }
 ```
+
+### 获取会员对应的角色信息
+
+|URL|http://www.zmsk.com/api/store/member/role/{memberId}|
+|---|---|
+|method|GET|
+
+|参数名|参数描述|
+|---|--|
+|memberId|会员Id|
+
+返回值
+
+```json
+{
+  "code": 200,
+  "data": [
+    {
+      "memberId": "2",
+      "roleId": 3,
+      "roleName": "admin"
+    },
+    {
+      "memberId": "2",
+      "roleId": 2,
+      "roleName": "employee"
+    }
+  ],
+  "msg": "success"
+}
+```
+
+返回值参数说明
+
+|参数名|参数描述|
+|---|--|
+|memberId|会员Id|
+|roleId|角色Id|
+|roleName|角色名称|
