修改权限文档

--- a/接口文档/权限/门店操作/会员操作接口文档.md
+++ b/接口文档/权限/门店操作/会员操作接口文档.md
@@ -2,7 +2,7 @@
 
 ### 创建门店下的会员
 
-|URL|http://www.zmsk.com/api/store/authority/member/create?phoneNumber=&name=&password=&email=&storeId=|
+|URL|http://www.zmsk.com/api/store/authority/member/create?phoneNumber=&name=&password=&email=&storeId=&roleId=|
 |---|---|
 |method|POST|
 
@@ -15,6 +15,7 @@
 |password|密码|是|
 |email|邮箱|否|
 |storeId|关联门店Id|是|
+|roleId|权限Id|是|
 
 
 返回值
@@ -50,7 +51,8 @@
     "locked": 0,
     "name": "member1",
     "phoneNumber": "15080450046",
-    "storeId": "ondf6u0tpyr804wn6kes"
+    "storeId": "ondf6u0tpyr804wn6kes"，
+	"roleId":2,
   },
   "msg": "success"
 }
@@ -71,7 +73,7 @@
 ### 修改会员信息
 
 
-|URL|http://www.zmsk.com/api/store/authority/member/update?memberId=phoneNumber=&name=&email=&storeId=|
+|URL|http://www.zmsk.com/api/store/authority/member/update?memberId=phoneNumber=&name=&email=&storeId=&roleId|
 |---|---|
 |method|POST|
 
@@ -86,6 +88,7 @@
 |phoneNumber|姓名|否|
 |email|邮箱|否|
 |storeId|关联门店Id|否|
+|roleId|权限Id|否|
 
 返回值
 
