--- a/接口文档/权限/门店操作/角色权限操作接口文档.md
+++ b/接口文档/权限/门店操作/角色权限操作接口文档.md
@@ -3,35 +3,14 @@
 
 ### 绑定角色权限
 
-|URL|http://www.zmsk.com/api/store/role/permission/bind?roleId=&permissionId=|
+|URL|http://www.zmsk.com/api/store/role/permission/bind?roleId=&permissionIds=|
 |---|---|
 |method|POST|
 
 |参数名|参数描述|
 |---|--|
 |roleId|角色Id|
-|permissionId|权限Id|
-
-返回值
-
-```json
-{
-  "code": 200,
-  "msg": "success"
-}
-```
-
-
-### 解绑角色权限
-
-|URL|http://www.zmsk.com/api/store/role/permission/unbind?roleId=&permissionId=|
-|---|---|
-|method|POST|
-
-|参数名|参数描述|
-|---|--|
-|roleId|角色Id|
-|permissionId|权限Id|
+|permissionIds|权限Ids|
 
 返回值
 
