修改会员登入返回值

--- a/接口文档/门店操作/新版门店信息接口/会员登入操作接口.md
+++ b/接口文档/门店操作/新版门店信息接口/会员登入操作接口.md
@@ -18,10 +18,21 @@
 {
   "code": 200,
   "data": {
-    "storeId": "ondf6u0tpyr804wn6kes",
+    "permissions": [
+      {
+        "permissionName": "中控台",  //权限资源名称
+        "permissionUrl": "/index" //权限资源请求url
+      },
+      {
+        "permissionName": "商品管理",
+        "permissionUrl": "store/commodity"
+      }
+    ],
+    "storeId": "1",
     "storeImagePath": "/image/xxee/sdsdq2/dde3.jpg",
     "storeName": "test",
-    "storeNoticeMessage": "欢迎使用指点系统"
+    "storeNoticeMessage": "欢迎使用指点系统",
+    "template": "/temp/ty3"
   },
   "msg": "success"
 }
