新增权限获取操作

--- a/接口文档/权限/门店操作/权限操作接口文档.md
+++ b/接口文档/权限/门店操作/权限操作接口文档.md
@@ -27,3 +27,78 @@
   "msg": "success"
 }
 ```
+
+### 获取会员角色对应的资源信息
+
+|URL|http://www.zmsk.com/api/store/authority/permission/query?roleId=|
+|---|---|
+|method|GET|
+
+|参数名|参数描述|
+|---|--|
+|roleId|角色id|
+
+返回值
+
+```json
+{
+  "code": 200,
+  "data": [
+    {
+      "hasPermission": true, 
+      "id": 1,
+      "name": "中控台",
+      "parentId": 0,
+      "parentIds": "",
+      "percode": "admin:*",
+      "type": "menu",
+      "url": "/index"
+    },
+    {
+      "hasPermission": true,
+      "id": 2,
+      "name": "商品管理",
+      "parentId": 0,
+      "parentIds": "0",
+      "percode": "admin:*",
+      "type": "menu",
+      "url": "store/commodity"
+    },
+    {
+      "hasPermission": false,
+      "id": 3,
+      "name": "商品列表",
+      "parentId": 2,
+      "parentIds": "2",
+      "percode": "admin:*",
+      "type": "menu",
+      "url": "store/commodity/list/{storeId}"
+    },
+    {
+      "hasPermission": false,
+      "id": 4,
+      "name": "分类管理",
+      "parentId": 2,
+      "parentIds": "2",
+      "percode": "admin:*",
+      "type": "menu",
+      "url": "commodity/category/"
+    }
+  ],
+  "msg": "success"
+}
+```
+
+返回值参数说明
+
+|参数名|描述|
+|---|---|
+|id|权限Id|
+|hasPermission|该角色是否有权限|
+|name|权限名称|
+|parentId|父节点Id|
+|parentIds|父节点列表|
+|percode|权限字符串|
+|type|类型|
+|url|请求url|
+
