新增规格参数

--- a/接口文档/门店操作/商品操作接口文档/商品操作接口文档.md
+++ b/接口文档/门店操作/商品操作接口文档/商品操作接口文档.md
@@ -21,7 +21,9 @@ body 参数
     "commodityPreferentialPrice":55,
     "commodityStorage":30,
     "commodityStatus":1,
-    "commoditySort":5
+    "commoditySort":5,
+	"commodity_unit":"份",
+	"commoditySpecificate":"[{'k':'口味','v':'微辣'}]"
 }
 ```
 
@@ -39,6 +41,7 @@ body 参数
 |commodityStorage|商品默认每天库存|
 |commodityStatus|商品状态，0删除，1上架，2下架|
 |commoditySort|商品排序值|
+|commoditySpecificate|商品规格参数|
 
 返回值说明
 
@@ -82,7 +85,9 @@ body 参数
     "commodityPreferentialPrice":55,
     "commodityStorage":30,
     "commodityStatus":1,
-    "commoditySort":5
+    "commoditySort":5,
+	"commodity_unit":"份",
+	"commoditySpecificate":"[{'k':'口味','v':'微辣'}]"
 }
 ```
 
@@ -156,7 +161,9 @@ body 参数
       "commodityStorage": -1,
       "commodityUpdateTime": 1504709567,
       "id": 1,
-      "storeId": 1
+      "storeId": 1,
+	  "commoditySpecificate": "[{'k':'口味','v':'微辣'}]",
+	  "commodityUnit": "份"
     },
     {
       "categoryId": 1,
@@ -171,7 +178,9 @@ body 参数
       "commodityStorage": 30,
       "commodityUpdateTime": 1505398917,
       "id": 4,
-      "storeId": 1
+      "storeId": 1,
+	  "commoditySpecificate": "[{'k':'口味','v':'微辣'}]",
+	  "commodityUnit": "份"
     }
   ],
   "msg": "success"
