解决文档表格乱问题

--- a/face-doc/设备端操作接口文档/设备认证信息上报接口文档.md
+++ b/face-doc/设备端操作接口文档/设备认证信息上报接口文档.md
@@ -10,14 +10,15 @@
 参数说明
 
 |参数名|描述|
+|---|---|
 |name|名称|
 |idNumber|身份证号|
 |nation|民族|
 |address|身份证地址|
 |avatar|头像|
-|sex|性别，1：女2：男|
-|type|类型，1：人证，2人脸|
-|result|认证结果，0：未通过1：通过|
+|sex|性别1：女2：男|
+|type|类型1：人证，2人脸|
+|result|认证结果 0：未通过1：通过|
 |deviceNumber|身边登入账号|
 
 返回值
