新增所属分组

--- a/face-doc/人脸管理后台操作接口文档/人脸库操作接口文档.md
+++ b/face-doc/人脸管理后台操作接口文档/人脸库操作接口文档.md
@@ -3,7 +3,7 @@
 
 ### 新增人脸库
 
-|URL|face.doinggo.com/api/manager/library/add?name=&sex=&idNumber=&nation=&address=&avatar=&remark=&flag=&organizationId=&equipmentId=|
+|URL|face.doinggo.com/api/manager/library/add?name=&sex=&idNumber=&nation=&address=&avatar=&remark=&flag=&organizationId=&equipmentId=&groupId=|
 |---|---|
 |method|POST|
 
@@ -21,6 +21,7 @@
 |flag| 黑白名单标识 1：白名单，2：黑名单|是|
 |organizationId|组织Id|是|
 |equipmentId|设备Id列表，多个Id使用逗号分隔|是|
+|groupId|所属分组Id|是|
 
 返回值
 
