--- a/face-doc/人脸管理后台操作接口文档/设备操作接口文档.md
+++ b/face-doc/人脸管理后台操作接口文档/设备操作接口文档.md
@@ -279,3 +279,44 @@
   "msg":"修改设备备注信息操作失败"
 }
 ```
+
+### 获取组织下设备备注信息
+
+|URL|face.doinggo.com/api/manager/equipment/remark?organizationId=|
+|---|---|
+|method|GET|
+
+参数说明
+
+|参数名|描述|
+|---|---|
+|organizationId|组织Id|
+
+返回值
+
+成功
+
+```json
+{
+  "code": 200,
+  "data": [
+    {
+      "id": 11,
+      "remark": "南门A1"
+    },
+    {
+      "id": 12,
+      "remark": "南门A2"
+    }
+  ],
+  "msg": "success"
+}
+```
+
+参数说明
+
+|参数名|描述|
+|---|---|
+|id|主键Id|
+|remark|备注|
+
