认证记录和黑白名单接口完善

--- a/face-doc/设备端操作接口文档/设备认证信息上报接口文档.md
+++ b/face-doc/设备端操作接口文档/设备认证信息上报接口文档.md
@@ -3,7 +3,7 @@
 
 ###  添加认证记录
 
-|URL|face.doinggo.com/api/device/authentication/record/add?name=&idNumber=&nation=&address=&avatar=&sex=&type=&result=&deviceNumber=|
+|URL|face.doinggo.com/api/device/authentication/record/add?name=&idNumber=&nation=&address=&avatar=&sex=&type=&result=&deviceNumber=&groupId=|
 |---|---|
 |mehtod|POST|
 
@@ -20,6 +20,7 @@
 |type|类型1：人证，2人脸|
 |result|认证结果 0：未通过1：通过|
 |deviceNumber|身边登入账号|
+|groupId|所属分组Id,不是必填，默认为0|
 
 返回值
 
