客户端上报接口新增参数

--- a/face-doc/设备端操作接口文档/设备认证信息上报接口文档.md
+++ b/face-doc/设备端操作接口文档/设备认证信息上报接口文档.md
@@ -3,7 +3,7 @@
 
 ###  添加认证记录
 
-|URL|face.doinggo.com/api/device/authentication/record/add?name=&idNumber=&nation=&address=&avatar=&sex=&type=&result=&deviceNumber=&groupId=|
+|URL|face.doinggo.com/api/device/authentication/record/add?name=&idNumber=&nation=&address=&avatar=&sex=&type=&result=&deviceNumber=&groupId=&authTimeStamp=&idcardImage=&idcardInfo=|
 |---|---|
 |mehtod|POST|
 
@@ -21,6 +21,9 @@
 |result|认证结果 0：未通过1：通过|
 |deviceNumber|身边登入账号|
 |groupId|所属分组Id,不是必填，默认为0|
+|authTimeStamp|认证时间戳|
+|idcardImage|身份证图片地址，默认值为空字符串|
+|idcardInfo|身份证基本信息，默认值为空字符串|
 
 返回值
 
