新增相似度

--- a/face-doc/人脸管理后台操作接口文档/认证记录操作接口文档.md
+++ b/face-doc/人脸管理后台操作接口文档/认证记录操作接口文档.md
@@ -131,6 +131,7 @@
 |groupName|所属分组|
 |idcardImage|身份证头像地址|
 |idcardInfo|身份证基本信息|
+|similarDegree|相似度|
 
 
 ### 获取组织对应警告认证记录
@@ -245,7 +246,7 @@
 |groupName|所属分组|
 |idcardImage|身份证头像地址|
 |idcardInfo|身份证基本信息|
-
+|similarDegree|相似度|
 
 
 ### 根据Id获取认证信息
@@ -304,3 +305,4 @@
 |groupId|所属分组Id|
 |idcardImage|身份证头像地址|
 |idcardInfo|身份证基本信息|
+|similarDegree|相似度|
