--- a/face-doc/设备端操作接口文档/设备认证信息上报接口文档.md
+++ b/face-doc/设备端操作接口文档/设备认证信息上报接口文档.md
@@ -3,7 +3,7 @@
 
 ###  添加认证记录
 
-|URL|face.doinggo.com/api/device/authentication/record/add?name=&idNumber=&nation=&address=&avatar=&sex=&type=&result=&deviceNumber=&groupId=&authTimeStamp=&idcardImage=&idcardInfo=|
+|URL|face.doinggo.com/api/device/authentication/record/add?name=&idNumber=&nation=&address=&avatar=&sex=&type=&result=&deviceNumber=&groupId=&authTimeStamp=&idcardImage=&idcardInfo=&similarDegree=|
 |---|---|
 |mehtod|POST|
 
@@ -24,6 +24,7 @@
 |authTimeStamp|认证时间戳|
 |idcardImage|身份证图片地址，默认值为空字符串|
 |idcardInfo|身份证基本信息，默认值为空字符串|
+|similarDegree|对比相似度,默认值为空字符串|
 
 返回值
 
