新增导出excel接口文档

--- a/face-doc/人脸管理后台操作接口文档/认证记录操作接口文档.md
+++ b/face-doc/人脸管理后台操作接口文档/认证记录操作接口文档.md
@@ -306,3 +306,29 @@
 |idcardImage|身份证头像地址|
 |idcardInfo|身份证基本信息|
 |similarDegree|相似度|
+
+### 导出认证记录
+
+|URL|face.doingo.com/api/manager/authertication/record/export?organizationId=&dateStr=|
+|---|---|
+|method|GET|
+
+参数说明
+
+|参数名|描述|
+|---|---|
+|organizationId|组织Id|
+|dateStr|日期字符串 如2018-07-08|
+
+失败
+
+```json
+{
+	"code": 50001,
+	"exception": "ExprotExcelException",
+	"msg": "未查询到导出数据",
+	"ressource": ""
+}
+```
+
+成功 直接下载文件
