--- a/face-doc/人脸管理后台操作接口文档/访客操作接口文档.md
+++ b/face-doc/人脸管理后台操作接口文档/访客操作接口文档.md
@@ -3,7 +3,7 @@
 
 ### 登记成访客
 
-|URL|face.doinggo.com/api/manager/visitor/register?id=&remark=|
+|URL|face.doinggo.com/api/manager/visitor/register?id=&remark=&groupId=|
 |---|---|
 |method|POST|
 
@@ -13,6 +13,7 @@
 |---|---|
 |id|认证记录主键Id|
 |remark|备注信息|
+|groupId|分组Id|
 
 返回值
 
