--- a/face-doc/人脸管理后台操作接口文档/人脸库操作接口文档.md
+++ b/face-doc/人脸管理后台操作接口文档/人脸库操作接口文档.md
@@ -465,15 +465,17 @@
     "address": "福建,福州",
     "avatar": "image.face.doinggo.com/sdc/33/d/1.jpg",
     "ctime": 1529420721,
+    "equipmentIds": "12",
     "flag": 1,
-    "groupId": 1,
+    "groupName": "test_group",
     "id": 3,
     "idNumber": "350423xxxxxxxx7019",
     "name": "warrior",
     "nation": "汉",
     "organizationId": 1,
     "remark": "",
-    "sex": 1
+    "sex": 1,
+    "supportDevice": "南门A2(已同步)"
   },
   "msg": "success"
 }
