客户端新增多文件上传接口

--- a/face-doc/设备端操作接口文档/设备文件上传接口文档.md
+++ b/face-doc/设备端操作接口文档/设备文件上传接口文档.md
@@ -16,3 +16,22 @@
 	"msg": "success"
 }
 ```
+
+### 多文件上传
+
+|URL|face.doinggo.com/api/device/upload/multiple/image|
+|---|----|
+|method|POST|
+
+返回值
+
+```json
+{
+    "code": 200,
+    "data": {
+        "secondImagePath": "http://paag0kq15.bkt.clouddn.com/20180710/1737/0k5pi4j2vrkhfycnidrd.jpg",
+        "firstImagePath": "http://paag0kq15.bkt.clouddn.com/20180710/1737/oift528icm949vneeqe1.jpg"
+    },
+    "msg": "success"
+}
+```
