新增修改人脸库接口文档

--- a/face-doc/人脸管理后台操作接口文档/人脸库操作接口文档.md
+++ b/face-doc/人脸管理后台操作接口文档/人脸库操作接口文档.md
@@ -490,4 +490,49 @@
 }
 ```
 
+### 修改人脸库操作
 
+|URL|face.doinggo.com/api/manager/library/update?id=&name=&sex=&idNumber=&nation=&address=&avatar=&remark=&flag=&groupId=&equipmentIds=|
+|---|---|
+|method|POST|
+
+
+
+参数说明
+
+|参数名|描述|是否必填|
+|----|---|----|
+|id|主键|是|
+|name|姓名|否|
+|sex|性别,1:女，2：男|否|
+|idNumber|身份证号|否|
+|nation|民族|否|
+|address|地址|否|
+|avatar|头像|否|
+|remark|备注|否|
+|flag| 黑白名单标识 1：白名单，2：黑名单|否|
+|equipmentIds|设备Id列表，多个Id使用逗号分隔|是|
+|groupId|所属分组Id|否|
+
+返回值
+
+成功
+
+```json
+{
+  "code": 200,
+  "msg": "success"
+}
+```
+
+
+非法访问
+
+```json
+{
+    "code": 40100,
+    "exception": "UnauthorizedAccessException",
+    "msg": "Submitted credentials for token [org.apache.shiro.authc.UsernamePasswordToken - warrior, rememberMe=false] did not match the expected credentials.",
+    "ressource": ""
+}
+```
