--- a/face-doc/设备端操作接口文档/设备人脸库同步操作接口文档.md
+++ b/face-doc/设备端操作接口文档/设备人脸库同步操作接口文档.md
@@ -32,6 +32,7 @@
       "nation": "汉",
       "organizationId": 1,
       "remark": "",
+      "operation": 1,
       "sex": 1
     },
     {
@@ -46,6 +47,7 @@
       "nation": "汉",
       "organizationId": 1,
       "remark": "222",
+	  "operation": 2,
       "sex": 1
     }
   ],
@@ -66,6 +68,7 @@
 |remark|备注|
 |flag| 黑白名单标识 1：白名单，2：黑名单|
 |organizationId|组织Id|
+|operation|操作标识：1：新增，2：删除|
 |ctime|创建时间戳|
 
 ### 标记人脸库同步记录
