身份证查询人脸库信息新增groupId返回

--- a/face-doc/人脸管理后台操作接口文档/人脸库操作接口文档.md
+++ b/face-doc/人脸管理后台操作接口文档/人脸库操作接口文档.md
@@ -472,6 +472,7 @@
     "idNumber": "350423xxxxxxxx7019",
     "name": "warrior",
     "nation": "汉",
+	"groupId": 1,
     "organizationId": 1,
     "remark": "",
     "sex": 1,
