新增删除角色文档

--- a/face-doc/人脸管理后台操作接口文档/角色操作接口文档.md
+++ b/face-doc/人脸管理后台操作接口文档/角色操作接口文档.md
@@ -198,6 +198,41 @@
 }
 ```
 
+### 删除角色信息
+
+|URL|face.doinggo.com/api/manager/role/delete/{ids}|
+|---|---|
+|method|POST|
+
+参数说明
+
+|参数名|描述|
+|---|---|
+|ids|主键Id,多个id使用逗号分割|
+
+返回值
+
+成功
+
+```json
+{
+  "code": 200,
+  "msg": "success"
+}
+```
+非法访问
+
+```json
+{
+    "code": 40100,
+    "exception": "UnauthorizedAccessException",
+    "msg": "Submitted credentials for token [org.apache.shiro.authc.UsernamePasswordToken - warrior, rememberMe=false] did not match the expected credentials.",
+    "ressource": ""
+}
+```
+
+
+
 ### 查询角色拥有的权限树型列表
 
 |URL|face.doinggo.com/api/manager/role/permission?roleId=|
