--- a/face-doc/设备端操作接口文档/设备人脸库同步操作接口文档.md
+++ b/face-doc/设备端操作接口文档/设备人脸库同步操作接口文档.md
@@ -94,3 +94,27 @@
   "msg": "success"
 }
 ```
+
+### 标记无效人脸库
+
+|URL|face.doinggo.com/api/device/face/flag/enable/{id}|
+|---|---|
+|method|POST||
+
+参数说明
+
+|参数名|描述|
+|---|---|
+|id|主键Id|
+
+
+返回值
+
+成功
+
+```
+{
+  "code": 200,
+  "msg": "success"
+}
+```
