--- a/face-doc/设备端操作接口文档/设备登入操作接口文档.md
+++ b/face-doc/设备端操作接口文档/设备登入操作接口文档.md
@@ -30,11 +30,17 @@
 }
 ```
 
-认证失败或设备未激活
+设备登入冲突
 
 ```json
 {
-  "code": 40100,
-  "msg": "无效的账号密码或设备未激活"
+  "code": 40900,
+  "msg": "设备登入冲突"
 }
+```
+
+认证失败 httpcode 401
+
+```json
+{"code":40100,"exception":"UnauthorizedAccessException","msg":"Invalid deviceNumber or devicePassword","ressource":""}
 ```
