完善设备登入接口文档

--- a/face-doc/设备端操作接口文档/设备登入操作接口文档.md
+++ b/face-doc/设备端操作接口文档/设备登入操作接口文档.md
@@ -3,7 +3,7 @@
 
 ### 设备登入
 
-|URL|face.doinggo.com/api/device/login?deviceNumber=&devicePassword=|
+|URL|face.doinggo.com/api/device/login?deviceNumber=&devicePassword=&macId=|
 |---|---|
 |method|POST|
 
@@ -13,6 +13,7 @@
 |---|---|
 |deviceNumber|设备登入账号|
 |devicePassword|设备登入密码|
+|macId|机器物理地址,第一次登入可不填默认值为空|
 
 返回值
 
