完善人脸库同步操作接口

--- a/face-doc/设备端操作接口文档/设备人脸库同步操作接口文档.md
+++ b/face-doc/设备端操作接口文档/设备人脸库同步操作接口文档.md
@@ -97,15 +97,16 @@
 
 ### 标记无效人脸库
 
-|URL|face.doinggo.com/api/device/face/library/flag/enable/{id}|
+|URL|face.doinggo.com/api/device/face/library/flag/enable?id=&errorCode=|
 |---|---|
-|method|POST||
+|method|POST|
 
 参数说明
 
 |参数名|描述|
 |---|---|
 |id|主键Id|
+|errorCode|错误码：1、下载人脸库失败，2、人脸重复添加 ，3、 未发现人脸特征 |
 
 
 返回值
